--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
    "scripts": {
       "server": "nodemon index.js",
       "start": "react-scripts start",
-      "test": "jest --watch",
+      "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --watch",
       "sass": "sass --watch scss/App.scss src/App.css"
    },
    "dependencies": {
+      "@fortawesome/fontawesome-svg-core": "^6.2.0",
+      "@fortawesome/free-regular-svg-icons": "^6.2.0",
+      "@fortawesome/free-solid-svg-icons": "^6.2.0",
+      "@fortawesome/react-fontawesome": "^0.2.0",
       "bootstrap": "^5.2.0",
       "cors": "^2.8.5",
       "express": "^4.18.1",
@@ -25,6 +29,7 @@
       "babel-jest": "^29.0.2",
       "chance": "^1.1.8",
       "jest": "^29.0.1",
+      "node-mocks-http": "^1.11.0",
       "nodemon": "^2.0.19",
       "react-scripts": "^5.0.1",
       "sass": "^1.54.9"
