--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
    "scripts": {
       "server": "nodemon index.js",
       "start": "react-scripts start",
-      "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --watch",
+      "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --watch --env=jsdom",
       "sass": "sass --watch scss/App.scss src/App.css"
    },
    "dependencies": {
@@ -19,19 +19,25 @@
       "cors": "^2.8.5",
       "express": "^4.18.1",
       "knex": "^2.2.0",
+      "react": "^17.0.2",
       "react-bootstrap": "^2.5.0",
+      "react-dom": "^17.0.2",
       "sqlite3": "^5.0.11"
    },
    "devDependencies": {
       "@babel/core": "^7.18.13",
-      "@babel/preset-env": "^7.18.10",
+      "@babel/preset-env": "^7.19.3",
       "@jest-mock/express": "^2.0.1",
+      "@testing-library/react-hooks": "^8.0.1",
       "babel-jest": "^29.0.2",
       "chance": "^1.1.8",
       "jest": "^29.0.1",
+      "jest-environment-jsdom": "^29.1.2",
+      "jest-fetch-mock": "^3.0.3",
       "node-mocks-http": "^1.11.0",
       "nodemon": "^2.0.19",
       "react-scripts": "^5.0.1",
+      "react-test-renderer": "^17.0.2",
       "sass": "^1.54.9"
    },
    "browserslist": {
