--- a/package.json
+++ b/package.json
@@ -19,10 +19,15 @@
       "bootstrap": "^5.2.0",
       "cors": "^2.8.5",
       "express": "^4.18.1",
+      "is-touch-device": "^1.0.1",
       "knex": "^2.2.0",
+      "rdndmb-html5-to-touch": "^7.1.3",
       "react": "^17.0.2",
       "react-bootstrap": "^2.5.0",
       "react-dnd": "^16.0.1",
+      "react-dnd-html5-backend": "^16.0.1",
+      "react-dnd-multi-backend": "^7.1.3",
+      "react-dnd-touch-backend": "^16.0.1",
       "react-dom": "^17.0.2",
       "sqlite3": "^5.0.11"
    },
