--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
       "express": "^4.18.1",
       "is-touch-device": "^1.0.1",
       "knex": "^2.2.0",
+      "prop-types": "^15.8.1",
       "rdndmb-html5-to-touch": "^7.1.3",
       "react": "^17.0.2",
       "react-bootstrap": "^2.5.0",
@@ -38,6 +39,8 @@
       "@testing-library/react-hooks": "^8.0.1",
       "babel-jest": "^29.0.2",
       "chance": "^1.1.8",
+      "eslint": "^8.30.0",
+      "eslint-plugin-react": "^7.31.11",
       "jest": "^29.0.1",
       "jest-environment-jsdom": "^29.1.2",
       "jest-fetch-mock": "^3.0.3",
