--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
       "react-dnd": "^16.0.1",
       "react-dnd-html5-backend": "^16.0.1",
       "react-dnd-multi-backend": "^7.1.3",
+      "react-dnd-preview": "^8.0.0",
       "react-dnd-touch-backend": "^16.0.1",
       "react-dom": "^17.0.2",
       "sqlite3": "^5.0.11"
