change allowed roles

--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -11,11 +11,11 @@
           },
           {
             "route": "/api/*",
-            "allowedRoles": ["authenticated"]
+            "allowedRoles": ["contributor"]
           },
       {
         "route": "/*",
-        "allowedRoles": ["authenticated"]
+        "allowedRoles": ["contributor"]
       }
     ],
     "mimeTypes": {
