--- a/package.json
+++ b/package.json
@@ -7,19 +7,26 @@
    "scripts": {
       "start": "react-scripts start",
       "build": "react-scripts build",
-      "sass": "sass --watch scss/App.scss src/App.css"
+      "swa": "npx swa start"
    },
    "dependencies": {
       "@babel/core": "7.24.7",
       "@emotion/react": "11.11.4",
       "@emotion/styled": "11.11.5",
+      "@fontsource/roboto": "^5.0.13",
       "@fortawesome/free-regular-svg-icons": "6.5.2",
       "@fortawesome/free-solid-svg-icons": "6.5.2",
       "@fortawesome/react-fontawesome": "0.2.2",
       "@fullcalendar/react": "6.1.15",
       "@fullcalendar/timegrid": "6.1.15",
+      "@mui/icons-material": "^5.16.6",
+      "@mui/lab": "^5.0.0-alpha.173",
+      "@mui/material": "^5.16.6",
+      "@mui/styled-engine-sc": "^6.0.0-alpha.18",
+      "@mui/x-date-pickers": "^7.12.0",
       "analog-clock-react": "1.3.0",
       "bootstrap": "5.3.3",
+      "dayjs": "^1.11.12",
       "prop-types": "15.8.1",
       "react": "18.3.1",
       "react-bootstrap": "2.10.3",
@@ -27,9 +34,11 @@
       "react-dnd": "16.0.1",
       "react-dnd-preview": "8.0.3",
       "react-dnd-touch-backend": "16.0.1",
-      "react-dom": "18.3.1"
+      "react-dom": "18.3.1",
+      "styled-components": "^6.1.12"
    },
    "devDependencies": {
+      "@azure/static-web-apps-cli": "2.0.1",
       "@babel/preset-react": "7.24.7",
       "chance": "1.1.11",
       "eslint": "8.57.0",
